--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>Hello courera</h1>
+<h1>Hello coursera, this is really basic.</h1>
 </body>
 </html>
